# filecatman2

./: README  README.md  maindev.py  pyproject.toml  requirements.txt
ExampleProject/: README.txt
ExampleProject/ImportBackup/: ImportBackup.json
filecatman/: __init__.py  __main__.py  config.py  filecatman.py  log.py  main.py
filecatman/core/: const.py  database.py  exceptions.py  functions.py  namespace.py  objects.py  printcolours.py
filecatman/core/queries/: newsqlitedatabase.sql
